--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name= "viewport" content="width=device-width, initial-scame-1.0, user-scalable-no"/>
-        <link rel="stylesheet" href="/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
